# ocp-protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE.txt  README.md  SECURITY.md
examples/: client_test.py  key_recovery.py  knowledge_sharing.py  multi_agent_consensus.py  research_demo.py  simple_agent.py  start_agent.py
node/: Dockerfile  config.yml  docker-compose.yml  requirements.txt
node/src/ocp_node/: __init__.py  __main__.py  database.py  (+5 more)
schemas/: agent-record.schema.json  bond-record.schema.json  did-document.schema.json  ocpumf.schema.json  vouch-record.schema.json
schemas/consensus/: consensus-initiate.schema.json  consensus-result.schema.json  consensus-vote.schema.json
schemas/discovery/: capability-query.schema.json  capability-response.schema.json  discovery-ping.schema.json
schemas/errors/: error-response.schema.json
schemas/ethics/: consent-token.schema.json  eal-entry.schema.json  ethics-metadata.schema.json  pur-entry.schema.json  transparency-card.schema.json
schemas/knowledge/: embedding.schema.json  insight.schema.json  model-delta.schema.json
schemas/recovery/: recovery-request.schema.json  recovery-share-response.schema.json  recovery-share.schema.json
schemas/registry/: discover-request.schema.json  discover-response.schema.json
schemas/tasks/: task-request.schema.json  task-response.schema.json
schemas/transport/: auth-handshake.schema.json  auth-result.schema.json
sdk/python/: README.md  pyproject.toml  pyproject.toml.txt
sdk/python/ocp/: __init__.py  __init__.py.txt  agent.py  cli.py  compliance.py  consensus.py  constants.py  crypto.py  exceptions.py  identity.py  knowledge.py  messages.py  pvl.py  recovery.py  registry.py  transport.py  trust.py
sdk/python/ocp/ethics/: __init__.py  agent_record_ext.py  bias.py  bond_ethics.py  cascade.py  cognitive.py  compliance_checker.py  compute_footprint.py  consensus_integrity.py  consent.py  constants.py  data_sovereignty.py  decommission.py  did_ext.py  dual_use.py  eal.py  emergent_behavior.py  evl.py  exceptions.py  knowledge_expiry.py  message_ethics.py  model_collapse.py  notifications.py  power_dynamics.py  pur.py  risk_classification.py  sanctions.py  synthetic.py  training_provenance.py  transparency.py  trust_anti_gaming.py
tests/: conftest.py  test_consensus.py  test_crypto.py  test_evl.py  test_identity.py  test_knowledge.py  test_messages.py  test_pvl.py  test_recovery.py  test_subsystems.py  test_transport.py  test_trust.py  test_v20_modules.py
