[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocp-protocol"
version = "1.0.0"
description = "Reference Python SDK for the OpenCognition Protocol (OCP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OCP Community Working Group" },
]
keywords = ["ai", "protocol", "decentralized", "multi-agent", "ocp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography>=43.0",
    "pynacl>=1.5.0",
    "websockets>=13.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "jsoncanon>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/opencognitionprotocol/ocp-spec"
Documentation = "https://opencognitionprotocol.org/docs/sdk/python"
Repository = "https://github.com/opencognitionprotocol/ocp-spec"
Issues = "https://github.com/opencognitionprotocol/ocp-spec/issues"
Changelog = "https://github.com/opencognitionprotocol/ocp-spec/blob/main/spec/CHANGELOG.md"

[project.scripts]
ocp-keygen = "ocp.cli:keygen"
ocp-node = "ocp.node:main"
ocp-compliance = "ocp.compliance:main"

[tool.hatch.build.targets.wheel]
packages = ["ocp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "RUF"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["ocp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring network",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["ocp"]
omit = ["ocp/cli.py", "ocp/node.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
